syntax = "proto3";
package arkeo.claim;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/arkeonetwork/arkeo/x/claim/types";

// actions for arkeo chain
enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ACTION_CLAIM = 0;
  ACTION_VOTE = 1;
  ACTION_DELEGATE = 2;
}

enum Chain {
  option (gogoproto.goproto_enum_prefix) = false;

  ARKEO = 0;
  ETHEREUM = 1;
}

// A Claim Records is the metadata of claim data per address
message ClaimRecord {

  Chain chain = 1;

  // arkeo address of claim user
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // claimable amount per action (claim, vote, delegate - changed to 0 after
  // action completed)
  cosmos.base.v1beta1.Coin amount_claim = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_claim\""
  ];
  cosmos.base.v1beta1.Coin amount_vote = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_vote\""
  ];
  cosmos.base.v1beta1.Coin amount_delegate = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_delegate\""
  ];
  bool is_transferable = 6;
}